Added servers var updater

--- a/web/list.html
+++ b/web/list.html
@@ -59,6 +59,7 @@
       var socket = io();
       socket.emit("getlist");
       var refreshInterval = setInterval(function() {socket.emit("getlist");}, 2000);
+      var updateInterval = setInterval(function() {socket.emit("updateserverlist");}, 20000);
       socket.on('list', function (list) {
         console.log("Refresh");
         $("#hiddenservertable").html("");
