--- a/web/list.html
+++ b/web/list.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="http://bootswatch.com/sandstone/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/list/style.css">
     
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -54,6 +54,6 @@
     </div>
     <table id="hiddenservertable"></table>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/list.js"></script>
+    <script src="/list/list.js"></script>
   </body>
 </html>
